# soham

./: CLAUDE.md  PRD.txt  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: expert_ai_programming_assistant.mdc  folder_structure.mdc
src/: App.css  App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: activity_poller.rs  cache.rs  config.rs  db.rs  error.rs  event_listener.rs  events.rs  focus.rs  icon_extractor.rs  lib.rs  main.rs  models.rs  realtime.rs  screenshot.rs  state.rs  system_stats.rs  watchdog.rs
src-tauri/src/commands/: analytics.rs  dashboard.rs  mod.rs  screenshots.rs  session.rs  system.rs
src-tauri/src/database/: mod.rs  pool.rs  repository.rs
src-tauri/src/icon_extractor/: macos.rs  windows.rs
src-tauri/src/services/: event_monitor.rs  mod.rs  screenshot.rs  system_monitor.rs
src/components/: Dashboard.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/dashboard/: ActivityFeed.tsx  ActivityHeatmap.tsx  AppDetailView.tsx  AppIcon.tsx  AppList.tsx  AppUsagePieChart.tsx  LiveEventFeed.tsx  LiveTerminal.tsx  Overview.tsx  ScreenshotCard.tsx  Screenshots.tsx  TimeTracking.tsx
src/components/ui/: calendar.tsx  date-time-picker.tsx  popover.tsx  switch.tsx
src/hooks/: README.md  useAppFlow.ts  useAppIcon.ts  useAppLifecycleFlow.ts  useDashboardData.ts  useFlowVisualization.ts  useHeatmapData.ts  useRealtime.ts  useScreenshots.ts  useSystemStats.ts
src/layouts/: MainLayout.tsx
src/lib/: IconService.ts  theme-provider.tsx
src/pages/: AppAnalyticsPage.tsx  ScreenshotsPage.tsx  SettingsPage.tsx  TimelinePage.tsx
src/tauri/src/: event_listener.rs  events.rs
src/types/: dashboard.ts
