[package]
name = "soham"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soham_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.21", features = [] }
tauri-plugin-shell = "2.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
active-win-pos-rs = "0.8.3"
sysinfo = { version = "0.29.11", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
dirs = "5.0.1"
image = "0.25.1"
base64 = "0.22.1"
xcap = "0.0.1"
tokio = { version = "1", features = ["full"] }
directories = "5.0.1"
notify = "8.1.0"
toml = "0.8.23"
screenshots = "0.8.10"
icns = "0.3.0"
plist = "1.6.1"
cocoa = "0.25"
objc = "0.2.7"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows-icons = "0.3.0"
ico = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3.0"
plist = "1.7.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-opener = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

